Add svg support.

--- a/wingsuit/apps/node-pl/patternlab-config.json
+++ b/wingsuit/apps/node-pl/patternlab-config.json
@@ -1,7 +1,7 @@
 {
   "cacheBust": true,
   "cleanPublic": true,
-  "defaultPattern": "protons-demo-welcome",
+  "defaultPattern": "wingsuit-welcome",
   "defaultShowPatternInfo": false,
   "ishControlsHide": {
     "s": false,
