Fix component generator and move to npm.

--- a/generators/new-component/package.json
+++ b/generators/new-component/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "generator-new-component",
-  "version": "0.0.1",
-  "description": "Generate a Wingsuit component",
+  "name": "@wingsuit-designsystem/generator-new-component",
+  "version": "0.0.2",
+  "description": "Generate a Wingsut component",
   "files": [
     "generators"
   ],
