--- a/.docksal/docksal.env
+++ b/.docksal/docksal.env
@@ -15,11 +15,23 @@ VARNISH_IMAGE=docksal/varnish:6.1
 VARNISH_CACHE_SIZE=128M
 # Docksal configuration.
 VIRTUAL_HOST=wingsuit.docksal
-
-PATTERNLAB_VIRTUAL_HOST=patternlab.wingsuit.docksal
 # Path variables
-DOCROOT=apps/drupal
-PATTERNLAB_PATH=/var/www
+DOCROOT=wingsuit
+
+# Wingsuit configuration.
+#
+# Add WINGSUIT_VIRTUAL_HOST as label to the cli container in your dockals.yml
+#   labels:
+#      - io.docksal.virtual-host={WINGSUIT_VIRTUAL_HOST}
+# Run fin ẃingsuit/url to get the patternlab path.
+WINGSUIT_VIRTUAL_HOST=wingsuit.${VIRTUAL_HOST}
+
+# Absolute Path to wingsuit base folder.
+# Add WINGSUIT_PATH as environment variable to your docksal.yml
+#   environment:
+#      ....
+#      - WINGSUIT_PATH=${WINGSUIT_PATH}
+WINGSUIT_PATH=/var/www/wingsuit
 
 
 # MySQL settings.
