--- a/wingsuit/package.json
+++ b/wingsuit/package.json
@@ -64,7 +64,8 @@
     "svg4everybody": "^2.1.9",
     "tailwindcss": "^1.2.0-canary.5",
     "vue": "^2.6.10",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "alpinejs": "^1.9.5"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
