WINGSUIT #00: Fix variable in docksal.yml

--- a/.docksal/docksal.env
+++ b/.docksal/docksal.env
@@ -24,7 +24,7 @@ DOCROOT=wingsuit
 #   labels:
 #      - io.docksal.virtual-host={WINGSUIT_VIRTUAL_HOST}
 # Run fin ẃingsuit/url to get the patternlab path.
-WINGSUIT_VIRTUAL_HOST=wingsuit.${VIRTUAL_HOST}
+WINGSUIT_VIRTUAL_HOST=wingsuit.wingsuit.docksal
 
 # Absolute Path to wingsuit base folder.
 # Add WINGSUIT_PATH as environment variable to your docksal.yml
