WINGSUIT #3: WIP: Refactor pattern macros. See todos in _render.twig.

--- a/wingsuit/apps/node-pl/pattern-lab/_data/wingsuit.patterns.yml
+++ b/wingsuit/apps/node-pl/pattern-lab/_data/wingsuit.patterns.yml
@@ -42,7 +42,7 @@ patterns:
         type: select
         label: Text color
         required: true
-        default_value: blue
+        default_value: orange
         options:
           blue: blue
           red: red
