Add Pattern render engine.

--- a/.docksal/docksal.env
+++ b/.docksal/docksal.env
@@ -22,7 +22,7 @@ DOCROOT=wingsuit
 #
 # Add WINGSUIT_VIRTUAL_HOST as label to the cli container in your dockals.yml
 #   labels:
-#      - io.docksal.virtual-host={WINGSUIT_VIRTUAL_HOST}
+#      - io.docksal.virtual-host=${WINGSUIT_VIRTUAL_HOST}
 # Run fin ẃingsuit/url to get the patternlab path.
 WINGSUIT_VIRTUAL_HOST=wingsuit.wingsuit.docksal
 
