--- a/wingsuit/composer.json
+++ b/wingsuit/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "phase2/wingsuit",
+    "name": "wingsuit-designsystem/wingsuit",
     "description": "A system of tools to build design systems in Pattern Lab for Drupal and Grav.",
     "type": "drupal-custom-theme",
     "license": "GPL-2.0",
     "homepage": "https://github.com/phase2/wingsuit",
     "authors": [
         {
-            "name": "Christopher Bloom (illepic)",
-            "email": "bloomcb@gmail.com"
+            "name": "Christian Wiedemann",
+            "email": "christian.wiedemann@key-tec.de"
         }
     ],
     "support": {
