--- a/wingsuit/package.json
+++ b/wingsuit/package.json
@@ -30,7 +30,7 @@
     "dev:drupal": "cross-env-shell NODE_ENV=development \"webpack --watch --config ./apps/drupal/webpack.config.js\"",
     "build:drupal": "cross-env-shell NODE_ENV=production \"webpack --config ./apps/drupal/webpack.config.js\"",
     "lint:js": "eslint --ext .js,.vue ./",
-    "lint:css": "stylelint '**/*.{css}'",
+    "lint:css": "stylelint '**/*.css'",
     "lint": "npm run lint:js; npm run lint:css;",
     "fmt:js": "npm run lint:js -- --fix",
     "fmt:css": "npm run lint:css -- --fix && prettier --loglevel warn --write '**/*.{css}'",
@@ -52,6 +52,7 @@
     "@wingsuit-designsystem/generator-new-component": "^0.0.6",
     "@wingsuit-designsystem/tools": "^0.0.16",
     "alpinejs": "^1.10.1",
+    "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "enquire.js": "^2.1.6",
     "generate-json-webpack-plugin": "^0.3.1",
