--- a/wingsuit/source/default/_patterns/01-atoms/button/button.wingsuit.yaml
+++ b/wingsuit/source/default/_patterns/01-atoms/button/button.wingsuit.yaml
@@ -10,6 +10,15 @@ button:
   settings:
     setting_1:
       type: select
+      label: Setting 1
       options:
-        option_1: Value 1
+        option_1: Setting 1 Value 1
+        option_2: Setting 1 Value 2
       preview: value_1
+    setting_2:
+      type: select
+      label: Setting 2
+      options:
+        option_1: Setting 2 Value 1
+        option_2: Setting 2 Value 2
+      preview: value_2
