--- a/tools/package.json
+++ b/tools/package.json
@@ -20,7 +20,9 @@
   "type": "module",
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
-    "alpinejs": "^2.0.1",
+    "@basalt/twig-renderer": "^0.13.2",
+    "@pattern-lab/engine-twig-php": "^5.7.1",
+    "alpinejs": "^2.2.1",
     "eslint-auto-fix": "^1.0.1",
     "fs-extra": "^8.1",
     "glob": "^7.1.6",
