Update andock config.

--- a/tools/package.json
+++ b/tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/tools",
-  "version": "0.0.18",
+  "version": "0.0.19-dev",
   "description": "Wingsuit Tools.",
   "main": "README.md",
   "repository": {
