--- a/wingsuit/source/default/_patterns/01-atoms/button/button.wingsuit.yml
+++ b/wingsuit/source/default/_patterns/01-atoms/button/button.wingsuit.yml
@@ -1,6 +1,6 @@
 button:
   use: "@atoms/button/_button.twig"
-  label: button
+  label: Button
   description: Example description
   fields:
     field_1:
