--- a/tools/package.json
+++ b/tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/tools",
-  "version": "0.0.19-dev",
+  "version": "0.0.1",
   "description": "Wingsuit Tools.",
   "main": "README.md",
   "repository": {
@@ -8,7 +8,7 @@
     "url": "git+https://github.com/wingsuit-designsystem/wingsuit.git"
   },
   "keywords": [
-    "Pattern Lab",
+    "Storybook",
     "Atomic Design",
     "Tailwind"
   ],
@@ -18,16 +18,16 @@
     "url": "https://github.com/wingsuit-designsystem/wingsuit/issues"
   },
   "type": "module",
-  "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
+  "homepage": "https://github.com/wingsuit-designsystem/wingsuit/core#readme",
   "dependencies": {
-    "@basalt/twig-renderer": "^0.13.2",
-    "@pattern-lab/engine-twig-php": "^5.7.1",
+    "twing": "3.1.1",
+    "@storybook/html": "^5.3.17",
+    "jsondiffpatch": "^0.3",
     "alpinejs": "^2.2.1",
     "eslint-auto-fix": "^1.0.1",
     "fs-extra": "^8.1",
     "glob": "^7.1.6",
     "js-yaml": "^3.13.1",
-    "jsondiffpatch": "^0.3",
     "prismjs": "^1.19.0",
     "tailwindcss": "~1",
     "yo": "^3.1.1"
@@ -36,7 +36,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
-    "jest": "^24.9.0"
+    "jest": "^25.3.0"
   },
   "scripts": {
     "test": "jest"
