--- a/pattern/package.json
+++ b/pattern/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pattern-loader",
+  "name": "@wingsuit-designsystem/pattern",
   "version": "0.0.1",
-  "description": "Wingsuit Pattern loader.",
+  "description": "Wingsuit UI Patterns.",
   "main": "README.md",
   "repository": {
     "type": "git",
@@ -20,12 +20,19 @@
   "type": "module",
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "jest": "^24.9.0"
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "chai": "^3.5.0",
+    "mocha": "^3.5.3",
+    "ts-node": "^8.8.2",
+    "tslint": "^3.15.1"
   },
   "scripts": {
-    "test": "jest"
+    "test": "mocha -r ts-node/register tests/**/*.spec.ts",
+    "lint": "npm-run-all -s lint:ts",
+    "lint:ts": "tslint -e **/definitions/**/* -e **/*.d.ts -c src/ts/tslint.json src/ts/**/*.ts || true"
+  },
+  "dependencies": {
+    "typescript": "^3.8.3"
   }
 }
