--- a/storybook/tsconfig.json
+++ b/storybook/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "dist",
     "removeComments": false,
     "sourceMap": true
+    // "compileOnSave": true
   },
   "include": [
     "src/**/*.ts"
