--- a/packages/ds/package.json
+++ b/packages/ds/package.json
@@ -22,37 +22,29 @@
   "dependencies": {
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
+    "@wingsuit-designsystem/pattern": "0.0.1",
+    "@wingsuit-designsystem/storybook": "0.0.1",
+    "@wingsuit-designsystem/tools": "0.0.1",
+    "@wingsuit-designsystem/twig-loader": "0.0.1",
+    "babel-jest": "^25.3.0",
+    "css-loader": "^3.4.0",
     "jest": "^25.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "reflect-metadata": "^0.1.13",
+    "terser-webpack-plugin": "^2.3.6",
     "ts-jest": "^25.4.0",
     "ts-loader": "^7.0.0",
     "ts-node": "^8.8.2",
-    "tslint": "^5.20.1",
-    "tslint-config-airbnb": "^5.11.2",
     "typescript": "^3.8.3",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-typescript": "^7.9.0",
-    "babel-jest": "^25.3.0",
-    "reflect-metadata": "^0.1.13",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
-    "webpack-merge": "^4.2.2",
-    "css-loader": "^3.4.0",
-    "@wingsuit-designsystem/storybook": "0.0.1",
-    "@wingsuit-designsystem/twig-loader": "0.0.1",
-    "@wingsuit-designsystem/pattern": "0.0.1",
-    "@wingsuit-designsystem/tools": "0.0.1"
+    "webpack-merge": "^4.2.2"
   },
   "scripts": {
-    "clean": "rimraf dist",
-    "build": "npm run clean && tsc",
-    "prepack": "npm run build",
-    "test": "jest",
-    "lint:ts": "tslint -e **/definitions/**/* -e **/*.d.ts  src/**/*.ts || true",
-    "lint:fix": "tslint --fix 'src/**/*{.ts,.tsx}'"
+    "prepare": "node ../../scripts/prepare.js"
   },
-  "devDependencies": {
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3"
+  "publishConfig": {
+    "access": "public"
   }
 }
