--- a/packages/pattern/package.json
+++ b/packages/pattern/package.json
@@ -19,27 +19,13 @@
   },
   "type": "module",
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
-  "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.2",
-    "eslint": "^6.8.0",
-    "jest": "^25.3.0",
-    "ts-jest": "^25.4.0",
-    "ts-loader": "^7.0.0",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.8.3"
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
-    "clean": "rimraf dist",
-    "build": "npm run clean && tsc",
-    "prepack": "npm run build",
-    "test": "jest"
+    "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-typescript": "^7.9.0",
-    "babel-jest": "^25.3.0",
     "faker": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "twig": "~1.15.1"
