--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -32,28 +32,9 @@
     "yo": "^3.1.1"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.0",
-    "jest": "^25.3.0",
-    "ts-jest": "^25.4.0",
-    "ts-loader": "^7.0.0",
-    "ts-node": "^8.8.2",
-    "tslint": "^5.20.1",
-    "tslint-config-airbnb": "^5.11.2",
-    "typescript": "^3.8.3",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-typescript": "^7.9.0",
-    "babel-jest": "^25.3.0",
-    "reflect-metadata": "^0.1.13",
     "@wingsuit-designsystem/pattern": "0.0.1"
   },
   "scripts": {
-    "clean": "rimraf dist",
-    "build": "npm run clean && tsc",
-    "prepack": "npm run build",
-    "test": "jest",
-    "lint:ts": "tslint -e **/definitions/**/* -e **/*.d.ts  src/**/*.ts || true",
-    "lint:fix": "tslint --fix 'src/**/*{.ts,.tsx}'"
+    "prepare": "node ../../scripts/prepare.js"
   }
 }
