--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": {
-    "name": "Phase2 Technology",
+    "name": "Christian Wiedemann",
     "url": "https://github.com/wingsuit-designsystem"
   },
   "repository": {
