--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -17,17 +17,8 @@
     "prototyping"
   ],
   "scripts": {
-    "storybook": "start-storybook --config-dir apps/storybook",
-    "patternlab": "patternlab --config ./apps/node-pl/patternlab-config.json",
-    "start": "npm run dev:pl-node",
+    "dev:storybook": "start-storybook --config-dir apps/storybook",
     "yo": "yo",
-    "pl-node": "node ./apps/node-pl/pl-app.js",
-    "ws-server": "node ../tools/render-engine/ws-render-server.js",
-    "setup": "patternlab install --config ./apps/node-pl/patternlab-config.json && patternlab build --config ./apps/node-pl/patternlab-config.json",
-    "export:pl": "patternlab export --config ./apps/node-pl/patternlab-config.json",
-    "dev:pl-node": "cross-env-shell NODE_ENV=development \"npm run pl-node & webpack-dev-server --config ./apps/node-pl/webpack.config.js --hot\"",
-    "build:pl": "cross-env-shell NODE_ENV=production \"npm run pl-node && webpack --config ./apps/node-pl/webpack.config.js\"",
-    "dev:build:pl": "cross-env-shell NODE_ENV=development \"npm run pl-node && webpack --config ./apps/node-pl/webpack.config.js\"",
     "dev:drupal": "cross-env-shell NODE_ENV=development \"webpack --watch --config ./apps/drupal/webpack.config.js\"",
     "build:drupal": "cross-env-shell NODE_ENV=production \"webpack --config ./apps/drupal/webpack.config.js\"",
     "lint:js": "eslint --ext .js,.vue ./",
@@ -61,8 +52,7 @@
     "@storybook/addon-viewport": "^5.3.17",
     "@storybook/html": "^5.3.17",
     "@wingsuit-designsystem/generator-new-component": "0.0.1",
-    "@wingsuit-designsystem/ds": "0.0.1",
-    "@wingsuit-designsystem/pattern": "0.0.1",
+    "@wingsuit-designsystem/core": "0.0.1",
     "@wingsuit-designsystem/storybook": "0.0.1",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
@@ -117,19 +107,14 @@
     "style-loader": "^1.0.2",
     "stylelint": "^12.0.0",
     "stylelint-config-prettier": "^8.0.0",
-    "stylelint-scss": "^3.14.2",
     "stylelint-webpack-plugin": "^1.2.3",
     "svg-spritemap-webpack-plugin": "^3.5.3",
     "terser-webpack-plugin": "^2.3.4",
-    "url-loader": "^3.0.0",
     "vue-jest": "^3.0.5",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11",
     "vue-testing-library": "^0.17.0",
     "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10",
-    "webpack-merge": "^4.2.2",
-    "yo": "^3.1.1",
-    "twig": "1.15.1"
+    "yo": "^3.1.1"
   }
 }
