--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prettier": "^2.0.2",
     "raf": "^3.4.0",
     "typescript": "^3.4.0",
-    "downlevel-dts": "^0.4.0"
+    "downlevel-dts": "^0.4.0",
+    "concurrently": "^5.1.0"
   }
 }
