--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/core",
-  "version": "0.0.1",
+  "version": "0.1.1-alpha.0",
   "description": "Wingsuit Core Design System.",
   "repository": {
     "type": "git",
