--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/storybook",
-  "version": "0.0.1",
+  "version": "0.1.1-alpha.0",
   "description": "Wingsuit Storybook Integration.",
   "repository": {
     "type": "git",
