--- a/packages/twig-loader/package.json
+++ b/packages/twig-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/twig-loader",
-  "version": "0.0.1",
+  "version": "0.1.1-alpha.0",
   "description": "Webpack loader for compiling twig.js templates",
   "main": "index.js",
   "scripts": {
@@ -20,13 +20,13 @@
     "twig": "~1.10.5"
   },
   "dependencies": {
+    "@wingsuit-designsystem/pattern": "0.0.1",
     "hasha": "^3.0.0",
     "loader-utils": "^1.1.0",
     "map-cache": "^0.2.2",
     "schema-utils": "^0.4.5",
     "twig": "1.15.1",
-    "underscore": "^1.9.1",
-    "@wingsuit-designsystem/pattern": "0.0.1"
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
