--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/wingsuit",
-  "version": "0.0.1",
+  "version": "0.1.1-alpha.0",
   "description": "A starterkit to build a design system with Pattern Lab Tailwind and Drupal",
   "main": "",
   "license": "GPL-2.0",
@@ -41,6 +41,9 @@
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@storybook/addon-a11y": "^5.3.17",
     "@storybook/addon-actions": "^5.3.17",
     "@storybook/addon-backgrounds": "^5.3.17",
@@ -51,33 +54,18 @@
     "@storybook/addon-storysource": "^5.3.17",
     "@storybook/addon-viewport": "^5.3.17",
     "@storybook/html": "^5.3.17",
-    "@wingsuit-designsystem/generator-new-component": "0.0.1",
     "@wingsuit-designsystem/core": "0.0.1",
+    "@wingsuit-designsystem/generator-new-component": "0.0.1",
     "@wingsuit-designsystem/storybook": "0.0.1",
     "autoprefixer": "^9.7.4",
-    "core-js": "^3.4.1",
-    "drupal-attribute": "^1.0.2",
-    "enquire.js": "^2.1.6",
-    "generate-json-webpack-plugin": "^0.3.1",
-    "holderjs": "^2.9.6",
-    "lodash": "^4.17.15",
-    "postcss-nested": "^4.2.1",
-    "prismjs": "^1.17.1",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "regenerator-runtime": "^0.13.3",
-    "svg4everybody": "^2.1.9",
-    "tailwindcss": "^1.2.0",
-    "twig-drupal-filters": "^2.0.0",
-    "vuex": "^3.1.2",
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@fullhuman/postcss-purgecss": "^1.3.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
     "css-loader": "^3.4.0",
+    "drupal-attribute": "^1.0.2",
+    "enquire.js": "^2.1.6",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.0",
@@ -91,29 +79,41 @@
     "fibers": "^4.0.2",
     "file-loader": "^5.0.2",
     "fs-extra": "^8.1.0",
+    "generate-json-webpack-plugin": "^0.3.1",
+    "holderjs": "^2.9.6",
     "jest": "^24.9.0",
     "jest-fetch-mock": "^2.1.2",
     "jest-vue-preprocessor": "^1.7.1",
     "jsondiffpatch": "^0.3.11",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.8.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.2.1",
     "postcss-pixels-to-rem": "^0.8.0",
     "postcss-preset-env": "^6.7.0",
     "postcss-replace": "^1.1.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
+    "prismjs": "^1.17.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "regenerator-runtime": "^0.13.3",
     "resolve-url-loader": "^3.1.1",
     "style-loader": "^1.0.2",
     "stylelint": "^12.0.0",
     "stylelint-config-prettier": "^8.0.0",
     "stylelint-webpack-plugin": "^1.2.3",
     "svg-spritemap-webpack-plugin": "^3.5.3",
+    "svg4everybody": "^2.1.9",
+    "tailwindcss": "^1.2.0",
     "terser-webpack-plugin": "^2.3.4",
+    "twig-drupal-filters": "^2.0.0",
     "vue-jest": "^3.0.5",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11",
     "vue-testing-library": "^0.17.0",
+    "vuex": "^3.1.2",
     "webpack": "^4.41.3",
     "yo": "^3.1.1"
   }
