--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,12 +1,20 @@
 {
   "name": "@wingsuit-designsystem/core",
-  "version": "0.1.1-alpha.0",
+  "version": "0.1.1-alpha.1",
   "description": "Wingsuit Core Design System.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wingsuit-designsystem/wingsuit.git"
   },
   "main": "./dist/index.js",
+  "files": [
+    "bin/**/*",
+    "dist/**/*",
+    "README.md",
+    "*.js",
+    "*.d.ts",
+    "ts3.5/**/*"
+  ],
   "keywords": [
     "Storybook",
     "Atomic Design",
