--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -54,9 +54,9 @@
     "@storybook/addon-storysource": "^5.3.17",
     "@storybook/addon-viewport": "^5.3.17",
     "@storybook/html": "^5.3.17",
-    "@wingsuit-designsystem/core": "0.0.1",
-    "@wingsuit-designsystem/generator-new-component": "0.0.1",
-    "@wingsuit-designsystem/storybook": "0.0.1",
+    "@wingsuit-designsystem/core": "0.1.1-alpha.2",
+    "@wingsuit-designsystem/generator-new-component": "0.1.1-alpha.2",
+    "@wingsuit-designsystem/storybook": "0.1.1-alpha.2",
     "autoprefixer": "^9.7.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
