--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,9 +31,9 @@
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
     "@types/webpack": "^4.41.12",
-    "@wingsuit-designsystem/pattern": "0.0.1",
-    "@wingsuit-designsystem/storybook": "0.0.1",
-    "@wingsuit-designsystem/twig-loader": "0.0.1",
+    "@wingsuit-designsystem/pattern": "0.1.1-alpha.2",
+    "@wingsuit-designsystem/storybook": "0.1.1-alpha.2",
+    "@wingsuit-designsystem/twig-loader": "0.1.1-alpha.2",
     "babel-jest": "^25.3.0",
     "css-loader": "^3.4.0",
     "jest": "^25.3.0",
