Fixes: Fix pattern generation. Add namespace support to stories.

--- a/packages/core/__int_tests__/_data/molecules/card/card.wingsuit.yml
+++ b/packages/core/__int_tests__/_data/molecules/card/card.wingsuit.yml
@@ -9,14 +9,16 @@ card:
       preview: Text
     image:
       type: pattern
-      id: image
+      preview:
+        id: image
   variants:
     horizontal:
       label: Label
       fields:
         image:
           type: pattern
-          id: image
+          preview:
+            id: image
   settings:
     color:
       type: select
