--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,7 +47,8 @@
     "typescript": "^3.8.3",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "yaml-loader": "^0.6.0"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
