--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/core",
-  "version": "0.1.1-alpha.4",
+  "version": "0.1.1-alpha.5",
   "description": "Wingsuit Core Design System.",
   "repository": {
     "type": "git",
@@ -31,40 +31,39 @@
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
     "@types/webpack": "^4.41.12",
-    "@wingsuit-designsystem/pattern": "0.1.1-alpha.4",
-    "@wingsuit-designsystem/storybook": "0.1.1-alpha.4",
-    "@wingsuit-designsystem/twig-loader": "0.1.1-alpha.4",
-    "jest": "^25.3.0",
-    "reflect-metadata": "^0.1.13",
-    "terser-webpack-plugin": "^2.3.6",
-    "typescript": "^3.8.3",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10",
-    "webpack-merge": "^4.2.2",
-    "yaml-loader": "^0.6.0",
-    "file-loader": "^5.0.2",
+    "@wingsuit-designsystem/pattern": "0.1.1-alpha.5",
+    "@wingsuit-designsystem/storybook": "0.1.1-alpha.5",
+    "@wingsuit-designsystem/twig-loader": "0.1.1-alpha.5",
+    "autoprefixer": "^9.7.4",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.4.0",
     "drupal-attribute": "^1.0.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^5.0.2",
+    "jest": "^25.3.0",
+    "jsondiffpatch": "^0.3.11",
     "mini-css-extract-plugin": "^0.8.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-replace": "^1.1.0",
-    "svg-spritemap-webpack-plugin": "^3.5.3",
-    "svg4everybody": "^2.1.9",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "autoprefixer": "^9.7.4",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
+    "reflect-metadata": "^0.1.13",
     "resolve-url-loader": "^3.1.1",
     "style-loader": "^1.0.2",
     "stylelint": "^12.0.0",
     "stylelint-config-prettier": "^8.0.0",
     "stylelint-webpack-plugin": "^1.2.3",
+    "svg-spritemap-webpack-plugin": "^3.5.3",
+    "svg4everybody": "^2.1.9",
     "terser-webpack-plugin": "^2.3.4",
-    "jsondiffpatch": "^0.3.11"
+    "typescript": "^3.8.3",
+    "webpack": "^4.41.3",
+    "webpack-cli": "^3.3.10",
+    "webpack-merge": "^4.2.2",
+    "yaml-loader": "^0.6.0"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
