--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,6 +42,7 @@
     "drupal-attribute": "^1.0.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^5.0.2",
+    "fs-extra": "^9.0.0",
     "jest": "^25.3.0",
     "jsondiffpatch": "^0.3.11",
     "mini-css-extract-plugin": "^0.8.2",
