--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -33,7 +33,9 @@
   "dependencies": {
     "@storybook/addon-knobs": "^5.3.17",
     "@storybook/html": "^5.3.17",
+    "@storybook/addon-centered": "^5.3.17",
     "@wingsuit-designsystem/pattern": "0.1.1-alpha.5",
+    "@storybook/addon-docs": "^5.3.17",
     "twig": "~1.15.1",
     "twig-drupal-filters": "^2.0.0"
   },
