--- a/.docksal/docksal.env
+++ b/.docksal/docksal.env
@@ -18,7 +18,7 @@ VIRTUAL_HOST=wingsuit.docksal
 # Path variables
 DOCROOT=wingsuit
 
-# Wingsuit configuration.
+# Server configuration.
 #
 # Add WINGSUIT_VIRTUAL_HOST as label to the cli container in your dockals.yml
 #   labels:
