--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -17,7 +17,7 @@
     "prototyping"
   ],
   "scripts": {
-    "dev:storybook": "start-storybook --config-dir apps/storybook",
+    "dev:storybook": "start-storybook --config-dir apps/storybook -s ./dist, ./images",
     "yo": "yo",
     "dev:drupal": "cross-env-shell NODE_ENV=development \"webpack --watch --config ./apps/drupal/webpack.config.js\"",
     "build:drupal": "cross-env-shell NODE_ENV=production \"webpack --config ./apps/drupal/webpack.config.js\"",
