--- a/packages/wingsuit/source/default/_patterns/02-molecules/card/card.wingsuit.yml
+++ b/packages/wingsuit/source/default/_patterns/02-molecules/card/card.wingsuit.yml
@@ -28,10 +28,13 @@ card:
   variants:
     default:
       label: Default
+    horizontal:
+      label: Horizontal
   settings:
     alignment:
       type: select
       label: Alignment
+      required: false
       options:
         left: Left
         center: Center
