--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/create-wingsuit",
-  "version": "0.1.1-y.5",
+  "version": "0.1.1-y.6",
   "description": "A script to generate Wingsuit",
   "main": "index.js",
   "scripts": {
@@ -18,5 +18,6 @@
   "license": "GPL-2.0",
   "dependencies": {
     "git-clone": "^0.1.0"
-  }
+  },
+  "gitHead": "487320117c182b2e52cae0995e309053c115ffc1"
 }
