--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wingsuit-designsystem/wingsuit",
   "version": "0.1.1-y.8",
-  "description": "A starterkit to build a design system with Pattern Lab Tailwind and Drupal",
+  "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "license": "GPL-2.0",
   "author": {
@@ -51,7 +51,7 @@
     "@storybook/addon-storysource": "^5.3.17",
     "@storybook/addon-viewport": "^5.3.17",
     "@wingsuit-designsystem/core": "0.1.1-y.8",
-    "@wingsuit-designsystem/generator-new-component": "0.1.1-alpha.3",
+    "@wingsuit-designsystem/generator-new-component": "0.1.1-y.8",
     "@wingsuit-designsystem/storybook": "0.1.1-y.8",
     "alpinejs": "^1.10.1",
     "core-js": "^3.4.1",
