--- a/packages/pattern/package.json
+++ b/packages/pattern/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/pattern",
-  "version": "0.1.1-y.8",
+  "version": "0.2.0",
   "description": "Wingsuit Patterns.",
   "repository": {
     "type": "git",
