--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/wingsuit",
-  "version": "0.1.1-y.8",
+  "version": "0.2.0",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "license": "GPL-2.0",
@@ -50,9 +50,9 @@
     "@storybook/addon-notes": "^5.3.17",
     "@storybook/addon-storysource": "^5.3.17",
     "@storybook/addon-viewport": "^5.3.17",
-    "@wingsuit-designsystem/core": "0.1.1-y.8",
+    "@wingsuit-designsystem/core": "0.2.0",
     "@wingsuit-designsystem/generator-new-component": "0.1.1-y.8",
-    "@wingsuit-designsystem/storybook": "0.1.1-y.8",
+    "@wingsuit-designsystem/storybook": "0.2.0",
     "alpinejs": "^1.10.1",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
