--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.1.1-y.8",
+  "version": "0.2.0",
   "registry": "https://registry.npmjs.org",
   "npmClient": "yarn"
 }
