--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/create-wingsuit",
-  "version": "0.1.1-y.8",
+  "version": "0.2.0",
   "description": "A script to generate Wingsuit",
   "main": "index.js",
   "scripts": {
