--- a/packages/twig-loader/package.json
+++ b/packages/twig-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/twig-loader",
-  "version": "0.1.1-y.8",
+  "version": "0.2.0",
   "description": "Webpack loader for compiling twig.js templates",
   "main": "index.js",
   "scripts": {
