--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,11 +38,14 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.0",
     "drupal-attribute": "^1.0.2",
+    "external-svg-sprite-loader": "^5.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^5.0.2",
     "fs-extra": "^9.0.0",
+    "image-webpack-loader": "^6.0.0",
     "jest": "^25.3.0",
     "jsondiffpatch": "^0.3.11",
     "mini-css-extract-plugin": "^0.8.2",
@@ -57,9 +60,11 @@
     "stylelint": "^12.0.0",
     "stylelint-config-prettier": "^8.0.0",
     "stylelint-webpack-plugin": "^1.2.3",
-    "svg-sprite-loader": "^4.2.7",
-    "svg-spritemap-webpack-plugin": "^3.5.3",
-    "svg4everybody": "^2.1.9",
+    "svg-sprite-loader": "^4.1.6",
+    "svg-spritemap-webpack-plugin": "^3.5.5",
+    "svg-transform-loader": "^2.0.8",
+    "svgo": "^1.3.0",
+    "svgo-loader": "^2.2.1",
     "terser-webpack-plugin": "^2.3.4",
     "typescript": "^3.8.3",
     "webpack": "^4.41.3",
