--- a/packages/wingsuit/package.json
+++ b/packages/wingsuit/package.json
@@ -17,10 +17,11 @@
     "prototyping"
   ],
   "scripts": {
-    "dev:storybook": "start-storybook --config-dir apps/storybook -s ./dist, ./images",
+    "dev:storybook": "npm run build:assets; start-storybook --config-dir apps/storybook -s ./dist/app-assets",
     "yo": "yo",
     "dev:drupal": "cross-env-shell NODE_ENV=development \"webpack --watch --config ./apps/drupal/webpack.config.js\"",
     "build:drupal": "cross-env-shell NODE_ENV=production \"webpack --config ./apps/drupal/webpack.config.js\"",
+    "build:assets": "cross-env-shell NODE_ENV=production \"webpack --config ./apps/assets/webpack.config.js\"",
     "lint:js": "eslint --ext .js,.vue ./",
     "lint:css": "stylelint '**/*.css'",
     "lint": "npm run lint:js; npm run lint:css;",
@@ -53,7 +54,6 @@
     "@wingsuit-designsystem/core": "0.2.2",
     "@wingsuit-designsystem/generator-new-component": "0.2.2",
     "@wingsuit-designsystem/storybook": "0.2.2",
-    "alpinejs": "^1.10.1",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.7.2",
@@ -70,12 +70,13 @@
     "lodash": "^4.17.15",
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.3",
-    "tailwindcss": "^1.2.0",
     "webpack": "^4.41.3"
   },
   "dependencies": {
     "require-context": "^1.1.0",
-    "svg4everybody": "^2.1.9"
+    "svg4everybody": "^2.1.9",
+    "alpinejs": "^1.10.1",
+    "tailwindcss": "^1.2.0"
   },
   "gitHead": "f9e3bccd539ec0748619216543e32b471fe3f123"
 }
