--- a/packages/generator-new-component/package.json
+++ b/packages/generator-new-component/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/generator-new-component",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Generate a Wingsut component",
   "files": [
     "generators"
@@ -13,5 +13,6 @@
     "lodash": "^4.17.15",
     "yeoman-generator": "^4.3.0",
     "yeoman-test": "^2.0.0"
-  }
+  },
+  "gitHead": "f05a12fa1c39691ee150ae453e7665bdf2930a5e"
 }
